--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -101,7 +101,7 @@
         </section>
 
         <div class="text-center">
-            <a href="/articles" class="btn btn-outline-dark btn-lg mt-2">
+            <a href="/reddit-articles/articles" class="btn btn-outline-dark btn-lg mt-2">
                 Explore All Headlines
             </a>
         </div>
